screen size 640 and less navbar spacing corrected

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,3 +204,95 @@ input[type=submit]:hover {
 nav a:hover {
   color: #5e7f7e;
 }
+
+/* Media Queries */
+
+/* On screens 980px and less */
+@media screen and (max-width: 980px) {
+	.wrapper {
+		width: 980px;
+	}
+	#logo {
+		margin-left: 80px;
+	}
+	nav ul {
+		padding-right: 80px;
+	}
+	.avatar {
+		margin-left: 100px;
+	}
+	p {
+		word-wrap: break-word;
+		margin-top: 20px;
+		display: inline-block;
+	}
+	#content {
+		width: 470px;
+		margin-left: 80px;
+		margin-bottom: 30px;
+	}
+}
+
+/* On screens 768px and less */
+@media screen and (max-width: 768px) {
+	.wrapper {
+		width: 768px;
+	}
+	#logo {
+		margin-left: 20px;
+	}
+	nav ul {
+		padding-right: 20px;
+	}
+	nav ul li {
+		font-size: 16px;
+	}
+}
+
+/* On screens 640px and less */
+@media screen and (max-width: 640px) {
+	.wrapper {
+		width: 640px;
+	}
+	header {
+		border-bottom: none;
+	}
+	#logo {
+		text-align: center;
+		width: 640px;
+		margin: 0px;
+	}
+	nav {
+		width: 640px;
+		border-bottom: 2px solid #ddd;
+		text-align: center;
+	}
+	nav ul {
+		padding: 0px;
+	}
+	nav ul li {
+		line-height: 60px;
+	}
+	nav ul li a {
+		margin: 0px;
+		padding: 10px 20px;
+	}
+	.avatar {
+		object-fit: cover;
+		width: 498px;
+		margin: 0px;
+	}
+	p {
+		word-wrap: break-word;
+		margin-top: 20px;
+		display: inline-block;
+	}
+	#content {
+		width: 560px;
+		margin-left: 40px;
+		margin-bottom: 30px;
+	}
+	.projects {
+		margin-left: 100px;
+	}
+}
